--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^11.6.1",
     "react-native-onesignal": "^3.9.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.2",
