--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-date-picker": "^3.2.9",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-input-spinner": "^1.4.8",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^11.6.1",
