--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gerenteDashMobile",
+  "name": "gerentedashmobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -49,7 +49,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
