--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,9 +10,16 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.5.2")
+        // classpath 'com.google.gms:google-services:4.3.5'
+        classpath 'com.google.gms:google-services:4.3.3'
+
+        // OneSignal-Gradle-Plugin
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.10, 0.99.99]'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
