--- a/package.json
+++ b/package.json
@@ -13,20 +13,27 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.10.3",
     "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/toolbar-android": "^0.1.0-rc.2",
+    "@react-native-firebase/app": "^10.8.1",
+    "@react-native-firebase/auth": "^10.8.1",
+    "@react-native-firebase/firestore": "^10.8.1",
+    "@react-native-firebase/messaging": "^10.8.1",
     "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/bottom-tabs": "^5.4.7",
     "@react-navigation/core": "^5.8.1",
     "@react-navigation/native": "^5.4.2",
     "@react-navigation/stack": "^5.3.9",
     "@rocketseat/unform": "^1.6.2",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
     "history": "^5.0.0",
     "immer": "^6.0.6",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
+    "react-firebase-hooks": "^2.2.0",
     "react-native": "0.62.2",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-date-picker": "^3.2.9",
@@ -36,6 +43,9 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^11.6.1",
     "react-native-onesignal": "^3.9.1",
+    "react-native-otp-inputs": "^6.0.0",
+    "react-native-phone-input": "^1.0.1",
+    "react-native-phone-number-input": "^2.0.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.7.0",
