--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
+    "date-fns-tz": "^1.1.3",
     "history": "^5.0.0",
     "immer": "^6.0.6",
     "prop-types": "^15.7.2",
