--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,7 +14,8 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.2")
+        // classpath("com.android.tools.build:gradle:3.5.2")
+        classpath("com.android.tools.build:gradle:4.0.1")
         // classpath 'com.google.gms:google-services:4.3.5'
         classpath 'com.google.gms:google-services:4.3.3'
 
@@ -40,6 +41,10 @@ allprojects {
 
         google()
         jcenter()
+
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
+
         maven { url 'https://www.jitpack.io' }
     }
 }
