--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "react-firebase-hooks": "^2.2.0",
     "react-native": "0.62.2",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-camera-roll-picker": "^2.0.0",
     "react-native-date-picker": "^3.2.9",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-crop-picker": "^0.36.0",
     "react-native-input-spinner": "^1.4.8",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
