--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -213,15 +213,17 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     // Import the Firebase BoM
-    // implementation platform('com.google.firebase:firebase-bom:26.5.0')
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
 
     // Declare the dependency for the Firebase SDK for Google Analytics
-    // implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-analytics'
 
     // Declare the dependencies for any other desired Firebase products
     // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
     // implementation 'com.google.firebase:firebase-auth'
     // implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
