--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,13 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "28.0.3"
+        // buildToolsVersion = "28.0.3"
+        buildToolsVersion = "29.0.2"
+        // buildToolsVersion = "30.0.0"
         minSdkVersion = 16
-        compileSdkVersion = 28
-        targetSdkVersion = 28
+        // minSdkVersion = 21
+        compileSdkVersion = 29
+        targetSdkVersion = 29
     }
     repositories {
         google()
@@ -46,5 +49,11 @@ allprojects {
         maven { url 'https://maven.google.com' }
 
         maven { url 'https://www.jitpack.io' }
+
+        configurations.all {
+        resolutionStrategy {
+            force 'com.facebook.android:facebook-android-sdk:4.34.0'
+        }
+    }
     }
 }
